--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     <div class="container features">
     	<div class="row">
     		<div class="col-sm-4">
-    			<a href="#"><img class="img-responsive" src="images/beans.jpg"></img></a>
+    			<a href="#"><img class="img-responsive" src="http://upload.wikimedia.org/wikipedia/commons/3/3f/Coffee_Beans.jpg"></img></a>
     			<p> The freshest locally sourced coffee. Organic and Fair Trade certified</p>	
     		</div>
     		
     		<div class="col-sm-4">
-    			<img class="img-responsive" src="images/coffee.jpg"></img>
+    			<img class="img-responsive" src="http://pixabay.com/static/uploads/photo/2014/07/15/13/36/coffee-shop-393954_640.jpg"></img>
     			<p> A perfect environment to meet with a friend or be alone and get work done.</p>
     		</div>
 
